# milky-ums

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
migration/: README.md
migration/src/: lib.rs  m20240411_194825_create_user_state_enum.rs  m20240412_063317_create_user.rs  m20240530_130156_create_role.rs  m20240530_132130_create_service.rs  m20240530_133643_create_permission.rs  m20240530_134552_create_m2m_role_permission.rs  m20240530_141709_create_m2m_role_user.rs  m20240601_100718_create_session.rs  m20240607_103644_create_default_role_id_cell.rs  m20240607_103716_create_app_init_state_cell.rs  m20240607_103716_create_init_state_cell.rs  m20240623_171621_create_access_log.rs
migrations/: env.py
migrations/versions/: 0ef0d27f9635_added_accesstag_permission.py  104028ac726c_init.py  89fc9179d035_initial.py  a5e842b360e5_initial.py
proto/: control.proto
src/: app.py  config.py  config.rs  exceptions.py  ioc.rs  lifespan.py  main.rs  router.py
src/adapters/: argon2_hasher.rs  argon2_password_hasher.rs  argon2_session_hasher.rs  email_confirm.rs  mod.rs  sha256_session_hasher.rs
src/adapters/auth/: header.rs  mod.rs  token.rs
src/adapters/database/: access_log_db.rs  connector.rs  init_state_db.rs  initializer.rs  mod.rs  permission_db.rs  role_db.rs  service_db.rs  session_db.rs  user_db.rs
src/adapters/database/models/: access_logs.rs  default_role.rs  init_state.rs  mod.rs  permission.rs  permissions.rs  prelude.rs  role.rs  role_permissions.rs  role_user.rs  roles.rs  service.rs  services.rs  sessions.rs  user.rs  users.rs
src/adapters/redis/: mod.rs  pool.rs  session_db.rs
src/application/: initial.rs  mod.rs
src/application/common/: access_log_gateway.rs  confirm_code.rs  email_confirm.rs  email_sender.rs  exceptions.rs  hasher.rs  id_provider.rs  interactor.rs  mod.rs  permission_gateway.rs  role_gateway.rs  server.rs  service_gateway.rs  session_gateway.rs  user_gateway.rs
src/application/permission/: get_by_user.rs  link.rs  mod.rs  unlink.rs  update.rs
src/application/role/: create.rs  delete.rs  delete_by_id.rs  get_by_id.rs  get_by_ids.rs  get_by_user.rs  get_range.rs  mod.rs  unlink.rs  update.rs  update_by_id.rs
src/application/service/: get_by_id.rs  get_range.rs  mod.rs  sync.rs  update.rs
src/application/session/: create.rs  delete.rs  delete_by_id.rs  delete_self.rs  extract_payload.rs  get_access_log.rs  get_access_log_self.rs  get_by_id.rs  get_by_user_id.rs  get_self.rs  mod.rs
src/application/user/: change_password.rs  confirm.rs  create.rs  get_by_id.rs  get_by_ids.rs  get_range.rs  get_self.rs  mod.rs  reset_password.rs  send_confirm_code.rs  update.rs  update_by_id.rs  update_self.rs
src/controllers/: __init__.py  auth.py  role.py  stats.py  user.py
src/dependencies/: repos.py  services.py
src/domain/: exceptions.rs
src/domain/models/: access_log.rs  current_user.rs  mod.rs  permission.rs  role.rs  service.rs  session.rs  ums_permission.rs  user.rs
src/domain/services/: access.rs  access_log.rs  mod.rs  role.rs  session.rs  user.rs  validator.rs
src/middleware/: jwt.py
src/models/: __init__.py  access.py  auth.py  error.py  file_type.py  permission.py  role.py  state.py
src/models/roles/: admin.json  user.json
src/models/schemas/: __init__.py  error.py  jwt.py  role.py  s3.py  session.py  user.py
src/models/tables/: __init__.py  access.py  permission.py  role.py  user.py
src/presentation/: id_provider.rs  interactor_factory.rs  mod.rs
src/presentation/api/: mod.rs  session.rs  user.rs
src/presentation/grpc/: greeter.rs  mod.rs  server.rs
src/presentation/rest/: role.rs  stats.rs
src/presentation/web/: deserializers.rs  exception.rs  mod.rs  server.rs
src/presentation/web/rest/: access_log.rs  mod.rs  permission.rs  role.rs  service.rs  session.rs  stats.rs  user.rs
src/protos/ums_control/: ums_control_pb2.pyi
src/services/: __init__.py  role.py  stats.py  ums_control.py  user.py
src/services/auth/: __init__.py  confirm_code.py  filters.py  jwt.py  password.py  session.py
src/services/repository/: __init__.py  access.py  base.py  role.py  role_access.py  role_permission.py  user.py
src/services/storage/: base.py  s3.py
src/ums/: config.py  db.py  exceptions.py  lifespan.py  main.py  router.py
src/ums/controllers/: __init__.py  auth.py  role.py  stats.py  user.py
src/ums/dependencies/: config.py  repos.py  services.py
src/ums/middleware/: jwt.py
src/ums/models/: __init__.py  auth.py  file_type.py
src/ums/models/schemas/: __init__.py  error.py  role.py  user.py
src/ums/models/tables/: __init__.py  permission.py  role.py  user.py
src/ums/protos/ums_control/: ums_control.proto  ums_control_pb2.py  ums_control_pb2_grpc.py
src/ums/repositories/: access.py  role.py  role_permission.py  user.py
src/ums/roles/: __init__.py  permission.py  utils.py
src/ums/roles/models/: admin.json  user.json
src/ums/security/: confirm_code.py  confirm_manager.py  filters.py  jwt.py  models.py  session.py  utils.py
src/ums/security/middleware/: jwt.py
src/ums/services/: __init__.py  auth.py  role.py  stats.py  ums_control.py  user.py
src/ums/services/auth/: __init__.py  filters.py  jwt.py  session.py
src/ums/services/repository/: access.py  base.py  role.py  role_permission.py  user.py
src/ums/utils/: __init__.py  email.py
src/ums/views/: base.py  role.py  s3.py  session.py  user.py
src/ums/views/email_templates/: successfully_confirm_email.html  successfully_reset_password.html
src/utils/: __init__.py  email.py  redis.py  role.py  s3.py  validators.py
src/views/: __init__.py  base.py  role.py  s3.py  session.py  user.py
src/views/email_templates/: confirm_email.html  reset_password.html  successfully_reset_password.html
templates/: base.html  confirm_code.html  email_confirm_code.html  email_confirm_success.html  registration.html  successfully_reset_password.html
templates/source/: confirm_code.html  email_confirm_success.html  registration.html  successfully_reset_password.html
