[package]
name = "milky-ums"
version = "2.0.1"
authors = ["JKearnsl <pooolg@hotmail.com>"]
edition = "2021"


[dependencies]
actix-web = { version = "^4.8", features = ["openssl"] }
openssl = "0.10.64"
env_logger = "^0.11"
log = "^0.4.22"
serde = { version = "^1.0.203", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "^1.0.117"
consulrs = "^0.1.0"
dotenv = "^0.15.0"
uuid = { version = "^1.9", features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics"
] }
sea-orm = { version = "^0.12.15", features = [
    "sqlx-postgres",
    "with-uuid",
    "runtime-tokio-rustls",
    "macros"
] }
chrono = "^0.4.38"
tokio = { version = "^1.38", features = [
    "rt",
    "rt-multi-thread",
    "macros"
] }
redis = { version = "^0.25.3", features = ["tokio-rustls-comp"] }
deadpool-redis = {  version = "^0.15.0", features = [
    "rt_tokio_1","serde"
] }
async-trait = "^0.1.79"
derive_more = "^0.99.17"
argon2 = "^0.5.3"
regex = "^1.10.4"
futures = "^0.3.30"
cached = { version = "^0.51.3", features = ["async"]}
rand = "^0.8.5"
strum = "^0.26.2"
strum_macros = "^0.26.3"
woothee = "^0.13.0"
sha2 = "^0.10.8"
tonic = "^0.11.0"
prost = "^0.12.6"
tonic-build = "0.11.0"
lapin = "^2.3.4"
tera = "^1.20.0"

[build-dependencies]
tonic-build = "^0.11.0"
