[tool.poetry]
name = "milky-ums"
version = "0.1.0"
description = "Backend UMS"
authors = ["JKearnsl <boyarshinovn@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
SQLAlchemy = "^2.0.19"
asyncpg = "^0.28.0"
aiobotocore = "^2.6.0"
python-consul = "^1.1.0"
redis = "^5.0.1"
pyjwt = "^2.8.0"
aio-pika = "^9.2.0"
email-validator  = "^2.0.0"
grpcio = "^1.57.0"
user-agents = "^2.2.0"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
grpcio-tools = "^1.57.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


