[tool.poetry]
name = "milky-ums"
version = "1.0.0"
description = "Backend UMS"
authors = ["JKearnsl <boyarshinovn@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.9"
user-agents = "^2.2.0"

SQLAlchemy = "^2.0.19"
asyncpg = "^0.29.0"
aiohttp = "3.9.3"
aiobotocore = "^2.7.0"
redis = "^5.0.1"

python-consul = "^1.1.0"
aio-pika = "^9.2.0"
email-validator  = "^2.0.0"
grpcio = "^1.59.0"
jinja2 = "^3.1.2"
argon2-cffi = "^23.1.0"
PyYAML = "^6.0.1"
python-dotenv= "^1.0.0"
python-jose = { version = "==3.3.*", extras = ["cryptography"] }

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
grpcio-tools = "^1.57.0"
types-aiobotocore = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.poetry.scripts]
ums = "ums.main:app"
test = "pytest"